--- a/README
+++ b/README
@@ -1,3 +1,19 @@
 This folder contain automatically downloaded tiles from Wplace
 
 The tiles are encrypted with gpg
+
+1. Generate keypar:
+`gpg --full-generate-key`
+- Choose RSA and RSA
+- Set no expiration
+- Enter a recognizable name
+- Set a safe passphrase
+
+2. Export keypair
+`gpg --armor --export "TileBot" > tiles.asc`
+`gpg --armor --export-secret-keys "TileBot" > private.key`
+
+3. Add public key to tiles.asc and private key and phrase s GH Secret `GPG_PRIVATE_KEY` `GPG_PASSPHRASE`
+
+
+To create liks.gpg: `gpg -e -r "TileBot" links`
